--- a/playbooks/roles/docker/tasks/auto-start.yml
+++ b/playbooks/roles/docker/tasks/auto-start.yml
@@ -7,8 +7,8 @@
 
 # [ port1, port2, port3 ] => "-p port1:port1 -p port2:port1 -p port3:port3"
 - name:     Setting Docker ports
-  set_fact: docker_ports="{{ ports | default([ port ]) | transform( "-p {0}:{0}" ) | join( ' ' ) }}"
-  when:     ( ports is defined ) or ( port is defined )
+  set_fact: docker_ports="{{ ports | transform( "-p {0}:{0}" ) | join( ' ' ) }}"
+  when:     ports is defined
 
 - set_fact: env_file="/opt/{{ name }}.env"
   when: env_vars is defined
@@ -33,3 +33,4 @@
     service: docker-{{ name }}
     title:   Docker app {{ name }}
     command: "docker kill '{{ name }}'; docker rm '{{ name }}'; docker pull '{{ image }}'; docker run {{ docker_ports | default('') }} {{ docker_env | default ('') }} --name '{{ name }}' '{{ image }}'"
+    timeout: "{{ docker.pull_timeout }}"
