--- a/playbooks/utils/service.yml
+++ b/playbooks/utils/service.yml
@@ -13,6 +13,8 @@
 - debug: msg="title = '{{ title }}'"
 - debug: msg="service = '{{ service }}'"
 - debug: msg="command = '{{ command }}'"
+- debug: var=port
+- debug: var=ports
 
 - include: "{{ common.utils.download }}"
 
