--- a/playbooks/roles/golang/meta/main.yml
+++ b/playbooks/roles/golang/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
   - { role: base,    when: periodic }
-  - { role: ansible, when: periodic and ( not is_docker|bool ) }
+  - { role: ansible, when: periodic|bool and ( not is_docker|bool ) }
