Docker role - supports image tags to pull, image to start is explicitly pulled, Docker play - wait and verify added

--- a/playbooks/docker-ubuntu.yml
+++ b/playbooks/docker-ubuntu.yml
@@ -12,5 +12,5 @@
 
   roles:
     - { role: run-before, period: daily }
-    - { role: docker, pull: [ evgenyg/echo, evgenyg/ansible, ubuntu ], start: evgenyg/echo, ports: [ 8080 ] }
+    - { role: docker, start: evgenyg/echo, ports: [ 8080 ], wait: [{ path: / }], verify: [{ path: / }] }
     - run-after
