--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -1,6 +1,17 @@
 ---
 # http://docs.docker.com/installation/ubuntulinux/
 
+- set_fact:
+    docker_pull: "{{ [ start ] }}"
+  when: start is defined
+
+- set_fact:
+    docker_pull: "{{ pull | default([]) | union( docker_pull | default([])) | unique | sort }}"
+
+- debug: msg="Docker images to pull - {{ docker_pull }}"
+- debug: msg="Docker image to start as a service - {{ start }}"
+  when:  start is defined
+
 - name:    Adding Docker repository key
   apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
 
@@ -23,17 +34,16 @@
     - docker images
 
 - command:    "docker pull '{{ item }}'"
-  with_items: pull
-  when: pull is defined
+  with_items: docker_pull
 
-- shell:    docker images | grep -v 'IMAGE ID' | awk '{print $1}' | sort -u
+- shell:    docker images | grep -v 'IMAGE ID' | awk '{print $1":"$2}' | sort -u
   register: docker_images
 
 - debug: var=docker_images.stdout_lines
 
 - fail: msg="Image '{{ item }}' is not found in the list of images pulled - {{ docker_images.stdout_lines }}"
-  when: item not in docker_images.stdout_lines
-  with_items: pull | default([])
+  when: "{{ not ( docker_images.stdout_lines | contains( item )) }}"
+  with_items: docker_pull
 
 - include: start.yml
   when: start is defined
