--- a/playbooks/roles/etcd/tasks/main.yml
+++ b/playbooks/roles/etcd/tasks/main.yml
@@ -21,5 +21,5 @@
     command:   "{{ etcd_bin }} $ETCD_OPTS"
     port:      "{{ etcd_port }}"
     verify:
-      - { path: /version, content: '"releaseVersion":"{{ etcd.version }}"' }
-      - { path: /v2/keys, content: '{"action":"get"' }
+      - { path: /version,         content: '"releaseVersion":"{{ etcd.version }}"' }
+      - { path: /v2/stats/leader, content: '{"leader":"' }
