--- a/playbooks/roles/helios/tasks/agent.yml
+++ b/playbooks/roles/helios/tasks/agent.yml
@@ -25,5 +25,13 @@
 - name:  Updating Helios agent script
   shell: sed -i "s|exec java|exec '{{ java_home }}/bin/java'|" '{{ helios.agent.script }}'
 
-- name: Starting Helios agent service
+- name: Updating Docker config
+  template:
+    src:  docker
+    dest: "{{ ubuntu.etc_default }}/docker"
+
+- name:    Restarting Docker service
+  service: name=docker state=restarted enabled=yes
+
+- name:    Starting Helios agent service
   service: name=helios-agent state=started enabled=yes
