Helios agent playbook pulls evgenyg/echo Docker image.

--- a/playbooks/helios-ubuntu.yml
+++ b/playbooks/helios-ubuntu.yml
@@ -12,5 +12,6 @@
 
   roles:
     - { role: run-before, period: daily }
+    - { role: docker, pull: [ evgenyg/echo ] }
     - helios
     - run-after
