--- a/playbooks/helios-agent-ubuntu.yml
+++ b/playbooks/helios-agent-ubuntu.yml
@@ -12,5 +12,6 @@
 
   roles:
     - { role: run-before, period: daily }
-    - { role: helios,     helios_role: agent }
+    - { role: docker, pull: [ evgenyg/echo ] }
+    - { role: helios, helios_role: agent }
     - run-after
