--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -35,7 +35,8 @@ common: {
     download: "{{ playbook_dir }}/utils/download.yml",
     service:  "{{ playbook_dir }}/utils/service.yml",
     verify:   "{{ playbook_dir }}/utils/verify.yml",
-    fake:     "{{ playbook_dir }}/utils/fake-package.yml"
+    fake:     "{{ playbook_dir }}/utils/fake.yml",
+    register: "{{ playbook_dir }}/utils/register.yml"
   },
 
   vars: {
