--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -2,12 +2,12 @@
 # --------------------------------------------
 #   Common tasks for Helios master and agent
 # --------------------------------------------
+- debug: msg="ansible_hostname = '{{ ansible_hostname }}'"
 - debug: msg="helios_master = '{{ helios_master }}'"
 - debug: msg="helios_master_port = '{{ helios_master_port }}'"
 - debug: msg="zookeeper_port = '{{ zookeeper_port }}'"
 - debug: msg="etcd_port = '{{ etcd_port }}'"
 - debug: msg="skydns_domain = '{{ skydns_domain }}'"
-- debug: msg="ansible_fqdn = '{{ ansible_fqdn }}'"
 
 - include: "{{ common.utils.fake }}"
   vars:
