--- a/playbooks/roles/helios/tasks/verify-master.yml
+++ b/playbooks/roles/helios/tasks/verify-master.yml
@@ -38,13 +38,13 @@
 - fail: msg="Running [{{ zk_shell_command }}] - 'zookeeper' is not in [{{ zk_shell.stdout }}]"
   when: not ( 'zookeeper' in zk_shell.stdout )
 
-- set_fact: my_ip="{{ facter_ipaddress_eth1 | default( ansible_default_ipv4.address )}}"
 #                         VirtualBox                              AWS
+- set_fact: my_ip="{{ facter_ipaddress_eth1 | default( ansible_default_ipv4.address )}}"
 - debug:    msg="My IP is [{{ my_ip }}]"
 
 - include: "{{ common.utils.register }}"
   vars:
     etcd_host:   "{{ master }}"
     skydns_host: "{{ master }}"
-    fqdn:        "{{ ansible_fqdn }}"
+    host:        "{{ ansible_hostname }}.{{ skydns_domain }}"
     ip:          "{{ my_ip }}"
