Helios/SkyDNS: skydns_domain => domain

--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -7,7 +7,7 @@
 - debug: msg="helios_master_port = '{{ helios_master_port }}'"
 - debug: msg="zookeeper_port = '{{ zookeeper_port }}'"
 - debug: msg="etcd_port = '{{ etcd_port }}'"
-- debug: msg="skydns_domain = '{{ skydns_domain }}'"
+- debug: msg="domain = '{{ domain }}'"
 
 - include: "{{ common.utils.fake }}"
   vars:
