--- a/playbooks/roles/helios/tasks/verify-master.yml
+++ b/playbooks/roles/helios/tasks/verify-master.yml
@@ -46,5 +46,5 @@
   vars:
     etcd_host:   "{{ master }}"
     skydns_host: "{{ master }}"
-    host:        "{{ ansible_hostname }}.{{ skydns_domain }}"
+    host:        "{{ ansible_hostname }}.{{ domain }}"
     ip:          "{{ my_ip }}"
