Helios agent playbook - 'hosts' update

--- a/playbooks/helios-agent-ubuntu.yml
+++ b/playbooks/helios-agent-ubuntu.yml
@@ -3,7 +3,7 @@
 # https://github.com/spotify/helios
 
 - name:  Helios Agent
-  hosts: helios-agent
+  hosts: helios-agent*
   sudo:  yes
 
   vars_files:
