--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -87,13 +87,10 @@
   with_dict: env | default({})
   when: env is defined
 
-- name:        Running {{ title }} tests
-  command:     "{{ ubuntu.bash }} -c '{{ item.run }} 2>&1'"
-  environment: "{{ run_env | default({}) }}"
-  register:    test_out
-  failed_when: item.expect not in test_out.stdout
-  with_items:
-    - "{{ tests }}"
+- include: "{{ common.utils.run }}"
+  vars:
+    commands: "{{ tests }}"
+    env:      "{{ run_env | default({}) }}"
   when: tests is defined
 
 - name:        Running {{ title }} cleanup commands
